# gstreamer

./: meson.build
docs/: meson.build
docs/gst/: meson.build
gst/: meson.build
gst/parse/: meson.build
gst/printf/: meson.build
